# LLM_Apps

./: .gitignore  .pre-commit-config.yaml  README.md  emb.dvc  history.json  pyproject.toml  setup.cfg
.dvc/: config
1 Code Generator/: app.py
2 Chatbot/: app.py
3 facts/: .gitignore  app.py  facts.md  facts.txt.dvc
