[tool.poetry]
name = "pycode"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.347"
gpt4all = "^2.0.2"
google-generativeai = "^0.2.2"
python-dotenv = "^1.0.0"
pre-commit = "^3.5.0"
dvc-s3 = "^2.23.0"
chromadb = "^0.4.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
